# unify-toy

./: .justfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
examples/: expected.csv  hotels.json  input.csv  room_names.csv
src/: city_code.rs  cli.rs  hotels.rs  input.rs  lib.rs  main.rs  output.rs  room_names.rs  serde.rs
